--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <td><i class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i><i
                                 class="fa fa-star" aria-hidden="true"></i><i class="fa fa-star"
                                 aria-hidden="true"></i><i class="fa fa-star" aria-hidden="true"></i></td>
-                        <td><a href="/restaurantes/sensei.html">Ver más</a></td>
+                        <td><a href="./restaurantes/sensei.html">Ver más</a></td>
                     </tr>
                     <tr>
                         <td>2</td>
